move mapper operations from controller to service layer add MapStruct for full and partial update change service methods to accept and return Dto instead of Entity separate book create and update methods