@@ -1,15 +1,15 @@
 package com.vrana.database.services.impl;
 
+import com.vrana.database.domain.dto.AuthorDto;
 import com.vrana.database.domain.entities.AuthorEntity;
+import com.vrana.database.mappers.AuthorMapper;
 import com.vrana.database.repositories.AuthorRepository;
 import com.vrana.database.services.AuthorService;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 @Service
 @RequiredArgsConstructor
@@ -17,38 +17,52 @@ public class AuthorServiceImpl implements AuthorService {
 
     private final AuthorRepository authorRepository;
 
+    private final AuthorMapper authorMapper;
+
     @Override
-    public AuthorEntity saveAuthor(AuthorEntity authorEntity) {
-        return authorRepository.save(authorEntity);
+    public AuthorDto createAuthor(AuthorDto authorDto) {
+        AuthorEntity authorEntity = authorMapper.mapFrom(authorDto);
+        AuthorEntity savedAuthorEntity = authorRepository.save(authorEntity);
+
+        return authorMapper.mapTo(savedAuthorEntity);
     }
 
     @Override
-    public List<AuthorEntity> findAll() {
-        return StreamSupport.stream(authorRepository
-                .findAll()
-                .spliterator(), false)
-                .collect(Collectors.toList());
+    public List<AuthorDto> findAllAuthors() {
+        return authorRepository.findAll()
+                .stream()
+                .map(authorMapper::mapTo)
+                .toList();
+    }
+
+    private AuthorEntity getAuthorEntityOrThrow(Long id) {
+        return authorRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Author not found with id: " + id));
     }
 
     @Override
-    public Optional<AuthorEntity> findOne(Long id) {
-        return authorRepository.findById(id);
+    public AuthorDto findOneOrThrow(Long id) {
+        AuthorEntity authorEntity = getAuthorEntityOrThrow(id);
+
+        return authorMapper.mapTo(authorEntity);
     }
 
     @Override
-    public boolean exists(Long id) {
-        return authorRepository.existsById(id);
+    public AuthorDto updateFullAuthor(Long id, AuthorDto authorDto) {
+        AuthorEntity existingAuthorEntity = getAuthorEntityOrThrow(id);
+        authorMapper.updateFullAuthorFromDto(authorDto, existingAuthorEntity);
+        AuthorEntity savedAuthorEntity = authorRepository.save(existingAuthorEntity);
+
+        return authorMapper.mapTo(savedAuthorEntity);
     }
 
     @Override
-    public AuthorEntity partialUpdate(Long id, AuthorEntity authorEntity) {
-        authorEntity.setId(id);
+    public AuthorDto updatePartialAuthor(Long id, AuthorDto authorDto) {
+        AuthorEntity existingAuthorEntity = getAuthorEntityOrThrow(id);
+        authorMapper.updatePartialAuthorFromDto(authorDto, existingAuthorEntity);
+        AuthorEntity savedAuthorEntity = authorRepository.save(existingAuthorEntity);
 
-        return authorRepository.findById(id).map(existingAuthor -> {
-            Optional.ofNullable(authorEntity.getName()).ifPresent(existingAuthor::setName);
-            Optional.ofNullable(authorEntity.getAge()).ifPresent(existingAuthor::setAge);
-            return authorRepository.save(existingAuthor);
-        }).orElseThrow(() -> new RuntimeException("Author does not exist"));
+        return authorMapper.mapTo(savedAuthorEntity);
     }
 
     @Override
